# subway

./: .gitignore  Guide.md  Smart_Subway_Guide_PRD.docx
smart-subway-guide/: .gitignore  CLAUDE.md  README.md
smart-subway-guide/apps/backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
smart-subway-guide/apps/backend/app/: __init__.py  config.py  main.py
smart-subway-guide/apps/backend/app/api/v1/: router.py
smart-subway-guide/apps/backend/app/api/v1/endpoints/: arrivals.py  auth.py  health.py  stations.py  travel_logs.py
smart-subway-guide/apps/backend/app/core/: __init__.py  exceptions.py  security.py
smart-subway-guide/apps/backend/app/domain/: __init__.py
smart-subway-guide/apps/backend/app/domain/arrivals/: __init__.py
smart-subway-guide/apps/backend/app/domain/auth/: __init__.py
smart-subway-guide/apps/backend/app/domain/stations/: __init__.py  data.py  kakao_api.py  models.py  service.py
smart-subway-guide/apps/backend/app/domain/travel_logs/: __init__.py
smart-subway-guide/apps/backend/app/infrastructure/: __init__.py  cache.py  database.py
smart-subway-guide/apps/backend/tests/: conftest.py
smart-subway-guide/apps/mobile/: README.md  analysis_options.yaml  pubspec.yaml
smart-subway-guide/apps/mobile/lib/: main.dart
smart-subway-guide/apps/mobile/linux/: CMakeLists.txt
smart-subway-guide/apps/mobile/test/: widget_test.dart
smart-subway-guide/apps/mobile/web/: index.html  manifest.json
smart-subway-guide/infrastructure/docker/: Dockerfile.backend  docker-compose.yml
(+27 files in other folders)
